# CWmailings

./: blog.json  manage.py  pyproject.toml
CWmailings/: asgi.py  settings.py  urls.py  wsgi.py
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blog_slug.py  0003_blog_views_count.py  0004_alter_blog_title.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
mailings/: admin.py  forms.py  jobs.py  models.py  urls.py  views.py
mailings/management/commands/: runapscheduler.py
mailings/migrations/: 0001_initial.py  0002_logs_client.py  0003_alter_logs_status.py  0004_remove_mailingoptions_start_time.py  0005_mailingoptions_start_time.py  0006_mailingoptions_finish_time_and_more.py  0007_alter_client_client_email.py  0008_alter_mailingoptions_options.py  0009_mailingoptions_user.py  0010_client_owner.py  0011_remove_client_owner_remove_mailingoptions_user.py  0012_client_client_owner.py  0013_message_message_owner.py  0014_mailingoptions_mailing_owner_and_more.py  0015_alter_logs_client.py  0016_alter_logs_last_attempt_time.py  0017_logs_send_email.py  0018_alter_logs_client.py  0019_alter_mailingoptions_send_period.py  0020_alter_mailingoptions_next_attempt.py  0021_alter_mailingoptions_options.py
mailings/templates/mailings/: base.html  client_confirm_delete.html  client_form.html  client_list.html  home.html  logs_list.html  mailingoptions_form.html  (+8 more)
users/: admin.py  forms.py  models.py  signals.py  urls.py  utilities.py  views.py
users/migrations/: 0001_initial.py
(+9 files in other folders)
