[tool.poetry]
name = "cwmailings"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
django = ">=4.2.7"
pillow = "^10.2.0"
ipython = "^8.19.0"
django-dump-load-utf8 = "^0.0.4"
redis = "^5.0.1"
python-dotenv = "^1.0.0"
django-apscheduler = "^0.6.2"
slugify = "^0.0.1"
pytils = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
